--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2216,6 +2216,10 @@ a {
   left: -9999px;
   opacity: 0;
   pointer-events: none;
+  display: none;
+  height: 0;
+  width: 0;
+  overflow: hidden;
 }
 
 /* Success Message */
